--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
+
+
 .screen {
-    color: white;
+    color: black;
     height: 10%;
+    background-color: rgba(127, 255, 212, 0.514);
+    font-family: 'Teko', sans-serif;
+    font-size: 1.5em;
 }
